--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "ext-intl": "*",
     "ext-pdo": "*",
     "ext-curl": "*",
+    "ext-zip": "*",
     "laravel/framework": "^8.0 || ^9.0",
     "michaeldrennen/remote-file": "^2.0",
     "michaeldrennen/local-file": "^2.0",
