--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     }
   ],
   "require": {
-    "php": "^7.0|^8.0",
+    "php": "^7.0 || ^8.0 || ^8.1 || ^8.2",
     "ext-intl": "*",
     "ext-pdo": "*",
     "ext-curl": "*",
